# robot-control-stack

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  debian_deps.txt  my_notes.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  cpp.yaml  docs.yml
assets/panda/mjcf/: generate_named_panda.sh  panda_unnamed.xml
assets/robots/fr3/mjcf/: generate_named_fr3.sh
assets/robots/panda/mjcf/: generate_named_panda.sh  panda_0.xml  panda_common.xml
assets/scenes/fr3_digit_simple_pick_up/assets/: fr3_link0.stl  fr3_link2.stl  fr3_link3.stl
assets/scenes/fr3_empty_world/assets/: fr3_link1.stl  fr3_link4.stl  fr3_link5.stl
assets/scenes/fr3_simple_pick_up/: fr3_common.xml  robot.xml
assets/scenes/fr3_simple_pick_up/assets/: fr3_link6.stl  fr3_link7.stl
assets/scenes/panda_empty_world/: panda_common.xml  robot.xml  scene.xml
assets/scenes/panda_empty_world/assets/: hand.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link6.stl  link7.stl
assets/scenes/so101_empty_world/: assets
assets/scenes/ur5e_empty_world/: robot.xml  scene.xml
assets/scenes/xarm7_empty_world/: assets  robot.xml
assets/ur5e/mjcf/: ur5e.xml
docker/: Dockerfile
docs/: conf.py  index.md
docs/_static/: version_switcher.json
docs/contributing/: index.md
docs/extensions/: index.md  overview.md  rcs_fr3.md  rcs_panda.md  rcs_robotiq.md
docs/getting_started/: index.md
docs/user_guide/: gym_interface.md
examples/fr3/: fr3_direct_control.py  fr3_env_cartesian_control.py  fr3_env_joint_control.py  fr3_readme.py  grasp_demo.py  grasp_digit_demo.py  grasp_ompl_demo.py
examples/so101/: so101_env_cartesian_control.py  so101_env_joint_control.py
examples/teleop/: README.md  calibrate.py  cons.py  digit_id.py  quest.py  quest_align_frame.py  quest_iris_dual_arm.py  requirements.txt  test_two_robots.py
examples/ur5e/: ur5e_env_cartesian_control.py  ur5e_env_joint_control.py
extensions/rcs_fr3/: CMakeLists.txt  README.md  pyproject.toml
extensions/rcs_fr3/src/hw/: CMakeLists.txt  Franka.cpp  Franka.h  FrankaHand.cpp  FrankaHand.h  main.cpp
extensions/rcs_fr3/src/pybind/: rcs.cpp
extensions/rcs_fr3/src/rcs_fr3/: __init__.py  __main__.py  creators.py  desk.py  envs.py  sensors.py  utils.py
extensions/rcs_fr3/src/rcs_fr3/_core/: __init__.pyi
extensions/rcs_fr3/src/rcs_fr3/_core/hw/: __init__.pyi
extensions/rcs_panda/: CMakeLists.txt  README.md  pyproject.toml
extensions/rcs_panda/src/rcs_panda/: __init__.py  creators.py  desk.py  envs.py  panda_env_cartesian_control.py  utils.py
extensions/rcs_panda/src/rcs_panda/_core/: __init__.pyi
extensions/rcs_panda/src/rcs_panda/_core/hw/: __init__.pyi
extensions/rcs_realsense/: pyproject.toml
extensions/rcs_realsense/src/rcs_realsense/: calibration.py  utils.py
extensions/rcs_robotics_library/: CMakeLists.txt  README.md  debian_deps.txt  pyproject.toml
extensions/rcs_robotics_library/src/pybind/: RL.h
extensions/rcs_robotics_library/src/rcs_robotics_library/_core/: __init__.pyi
extensions/rcs_robotiq/: README.md  pyproject.toml
extensions/rcs_robotiq/src/rcs_robotiq/: hw.py
extensions/rcs_robotiq2f85/: README.md  pyproject.toml
extensions/rcs_so101/: CMakeLists.txt  pyproject.toml
extensions/rcs_so101/src/pybind/: SO101.h
extensions/rcs_so101/src/rcs_so101/: __init__.py  creators.py
extensions/rcs_so101/src/rcs_so101/_core/: __init__.pyi
extensions/rcs_tacto/: pyproject.toml
extensions/rcs_tacto/src/rcs_tacto/: tacto_wrapper.py
extensions/rcs_ur5e/: pyproject.toml
extensions/rcs_ur5e/src/rcs_ur5e/: creators.py  hw.py  readme.md  robotiq_gripper.py
extensions/rcs_ur5e/src/rcs_ur5e/scripts/: test_gripper.py  test_robot.py
extensions/rcs_usb_cam/: pyproject.toml
extensions/rcs_xarm7/: pyproject.toml
include/rcs/: LinearPoseTrajInterpolator.h  Pose.h  Robot.h  Teleop.h
python/rcs/: __init__.py  __main__.py  lerobot.py  sensors.py
python/rcs/_core/: __init__.pyi  common.pyi  sim.pyi
python/rcs/camera/: digit_cam.py
python/rcs/envs/: base.py  creators.py  sim.py  storage_wrapper.py  utils.py
python/rcs/operator/: franka.py  interface.py  pedals.py  quest.py
python/tests/: test_kinematics.py  test_teleop.py
scripts/: quest_align_frame.py  quest_dual_arm.py  quest_iris_dual_arm.py  requirements.txt
src/pybind/: rcs.cpp
src/rcs/: Kinematics.cpp  Pose.cpp
src/sim/: SimGripper.cpp  SimGripper.h  SimRobot.cpp  SimRobot.h  SimTilburgHand.h  camera.cpp  camera.h  sim.cpp  test.cpp
