[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rcs_realsense"
version = "0.5.2"
description="RCS realsense module"
dependencies = [
    "rcs>=0.5.0",
    "pyrealsense2~=2.55.1",
    "pupil_apriltags",
    "diskcache",
]
maintainers = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
]
authors = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
]
requires-python = ">=3.11"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
