[build-system]
requires = []
build-backend = "scikit_build_core.build"

[project]
name = "rcs_robotics_library"
version = "0.5.2"
description="RCS robotics library integration"
readme = "README.md"
dependencies = [
    "rcs>=0.5.0",
]
maintainers = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
]
authors = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
  { name = "Pierre Krack", email = "pierre.krack@utn.de" },
]
requires-python = ">=3.10"


[tool.scikit-build]
build.verbose = true
build.targets = ["_core"]
logging.level = "INFO"
build-dir = "build"
wheel.packages = ["src/rcs_robotics_library"]
install.components = ["python_package"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"