[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rcs_usb_cam"
version = "0.5.0"
description="RCS USB Camera module"
dependencies = [
    "rcs>=0.5.0",
    "opencv-python~=4.10.0"
]
maintainers = [
  { name = "Tobias Jülg", email = "tobias.juelg@utn.de" },
  { name = "Seongjin Bien", email = "seongjin.bien@utn.de" },
]
authors = [
  { name = "Seongjin Bien", email = "seongjin.bien@utn.de" },
]
requires-python = ">=3.10"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"